--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,13 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.98"
 axum = { version = "0.8.4", features = ["macros", "ws"] }
+dashmap = "6.1.0"
 dotenv = "0.15.0"
 futures-util = "0.3.31"
 mongodb = "3.2.3"
 serde = "1.0.219"
+serde_json = "1.0.140"
 tokio = { version = "1.45.0", features = ["full"] }
+tracing = "0.1.41"
+tracing-appender = "0.2.3"
+tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
